fixing the slider

--- a/index.html
+++ b/index.html
@@ -361,83 +361,51 @@
                 <div class="worksttl">
                     <h1>WORKS</h1>
                 </div>
-                <!-- <div class="worksmain">
-                    <div class="work1">
-                        <figure>
-                            <p>
-                                <img src="img/website/chittle.png" alt="chittle">
-                            </p>
-                        </figure>
-                    </div>
-                    <div class="work2">
-                        <figure>
-                            <img src="img/website/nemu.png" alt="nemu">
-                        </figure>
-                    </div>
-                    <div class="work3">
-                        <figure>
-                            <img src="img/website/62resto.png" alt="62Resto">
-                        </figure>
-                    </div>
-                    <div class="work4">
-                        <figure>
-                            <img src="img/website/xco.png" alt="xco">
-                        </figure>
-                    </div>
-                    <div class="work5">
-                        <figure>
-                            <img src="img/website/tdl.png" alt="tdl">
-                        </figure>
-                    </div>
-                </div> -->
                 <div class="slider-container">
-
                     <div class="slider-content">
-
                         <div class="slider-single">
                             <img class="slider-single-image" src="img/website/chittle.png" alt="2" />
-                            <h1 class="slider-single-title">
+                            <h2 class="slider-single-title">
                                 <a target="_blank" href="https://click.ecc.ac.jp/ecc/json/Chittle/">
-                                    Chittle
+                                    サイトへ
                                 </a>
-                            </h1>
+                            </h2>
                         </div>
 
                         <div class="slider-single">
                             <img class="slider-single-image" src="img/website/xco.png" alt="3" />
-                            <h1 class="slider-single-title">
+                            <h2 class="slider-single-title">
                                 <a target="_blank" href="https://click.ecc.ac.jp/ecc/json/XCO-LP/">
-                                    XCO
+                                    サイトへ
                                 </a>
-                            </h1>
-
+                            </h2>
                         </div>
 
                         <div class="slider-single">
                             <img class="slider-single-image" src="img/website/62resto.png" alt="4" />
-                            <h1 class="slider-single-title">
+                            <h2 class="slider-single-title">
                                 <a target="_blank" href="https://click.ecc.ac.jp/ecc/json/+62Resto/">
-                                    +62Resto
+                                    サイトへ
                                 </a>
-                            </h1>
-
+                            </h2>
                         </div>
 
                         <div class="slider-single">
                             <img class="slider-single-image" src="img/website/nemu.png" alt="1" />
-                            <h1 class="slider-single-title">
+                            <h2 class="slider-single-title">
                                 <a target="_blank" href="https://click.ecc.ac.jp/ecc/json/Nemu-Nemu%20Kun/">
-                                    Nemu Nemu Kun
+                                    サイトへ
                                 </a>
-                            </h1>
-
+                            </h2>
                         </div>
 
                         <div class="slider-single">
                             <img class="slider-single-image" src="img/website/tdl.png" alt="5" />
-                            <h1 class="slider-single-title"><a target="_blank"
-                                    href="https://click.ecc.ac.jp/ecc/json/to-do-list/">To-Do-List</a></h1>
-
+                            <h2 class="slider-single-title"><a target="_blank"
+                                    href="https://click.ecc.ac.jp/ecc/json/to-do-list/">
+                                    サイトへ
+                                </a>
+                            </h2>
                         </div>
 
                     </div>
@@ -474,7 +442,7 @@
                     <div class="icons">
                         <a href="https://github.com/jasmix555" target="_blank">
                             <svg version="1.1" id="git" xmlns="http://www.w3.org/2000/svg"
-                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 141.7 141.7"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 141.7 141.7"
                                 style="enable-background:new 0 0 141.7 141.7;" xml:space="preserve">
                                 <style type="text/css">
                                     .st0 {
@@ -492,7 +460,7 @@
                         </a>
                         <a href="https://www.instagram.com/jason_ng555/" target="_blank">
                             <svg version="1.1" id="insta" xmlns="http://www.w3.org/2000/svg"
-                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 141.7 141.7"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 141.7 141.7"
                                 style="enable-background:new 0 0 141.7 141.7;" xml:space="preserve">
                                 <g>
                                     <path d="M70.9,83.3c6.9,0,12.5-5.6,12.5-12.5c0-2.7-0.9-5.2-2.4-7.3c-2.3-3.1-6-5.2-10.1-5.2c-4.2,0-7.8,2-10.1,5.2
@@ -508,7 +476,7 @@
                         </a>
                         <a href="https://twitter.com/Jasmix_555" target="_blank">
                             <svg version="1.1" id="twit" xmlns="http://www.w3.org/2000/svg"
-                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 141.7 141.7"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 141.7 141.7"
                                 style="enable-background:new 0 0 141.7 141.7;" xml:space="preserve">
                                 <path d="M70.9,0C31.7,0,0,31.7,0,70.9s31.7,70.9,70.9,70.9s70.9-31.7,70.9-70.9S110,0,70.9,0z M99.2,59.8c0,0.6,0,1.2,0,1.9
 	c0,19.2-14.6,41.4-41.4,41.4c-8.2,0-15.9-2.4-22.3-6.5c1.1,0.1,2.3,0.2,3.5,0.2c6.8,0,13.1-2.3,18.1-6.2
