--- a/index.html
+++ b/index.html
@@ -365,47 +365,62 @@
                     <div class="slider-content">
                         <div class="slider-single">
                             <img class="slider-single-image" src="img/website/chittle.png" alt="2" />
-                            <h2 class="slider-single-title">
+                            <div class="slider-single-title">
+                                <p>
+                                    新しい料理を試すのにちょうどいい量の調味料を販売するサイト。
+                                </p>
                                 <a target="_blank" href="https://click.ecc.ac.jp/ecc/json/Chittle/">
                                     サイトへ
                                 </a>
-                            </h2>
+                            </div>
                         </div>
 
                         <div class="slider-single">
                             <img class="slider-single-image" src="img/website/xco.png" alt="3" />
-                            <h2 class="slider-single-title">
+                            <div class="slider-single-title">
+                                <p>
+                                    XCOはいらない服を持ってる人同士が服を交換をするアプリです。
+                                </p>
                                 <a target="_blank" href="https://click.ecc.ac.jp/ecc/json/XCO-LP/">
                                     サイトへ
                                 </a>
-                            </h2>
+                            </div>
                         </div>
 
                         <div class="slider-single">
                             <img class="slider-single-image" src="img/website/62resto.png" alt="4" />
-                            <h2 class="slider-single-title">
+                            <div class="slider-single-title">
+                                <p>
+                                    家庭用インドネシアカフェをテーマにしたカフェサイト。
+                                </p>
                                 <a target="_blank" href="https://click.ecc.ac.jp/ecc/json/+62Resto/">
                                     サイトへ
                                 </a>
-                            </h2>
+                            </div>
                         </div>
 
                         <div class="slider-single">
                             <img class="slider-single-image" src="img/website/nemu.png" alt="1" />
-                            <h2 class="slider-single-title">
+                            <div class="slider-single-title">
+                                <p>
+                                    睡眠時間が確保しやすくなる睡眠サポートアプリ。
+                                </p>
                                 <a target="_blank" href="https://click.ecc.ac.jp/ecc/json/Nemu-Nemu%20Kun/">
                                     サイトへ
                                 </a>
-                            </h2>
+                            </div>
                         </div>
 
                         <div class="slider-single">
                             <img class="slider-single-image" src="img/website/tdl.png" alt="5" />
-                            <h2 class="slider-single-title"><a target="_blank"
-                                    href="https://click.ecc.ac.jp/ecc/json/to-do-list/">
+                            <div class="slider-single-title">
+                                <p>
+                                    JavaScript を練習して使用し、簡単な To Do List サイト/アプリを作成する。
+                                </p>
+                                <a target="_blank" href="https://click.ecc.ac.jp/ecc/json/to-do-list/">
                                     サイトへ
                                 </a>
-                            </h2>
+                            </div>
                         </div>
 
                     </div>
