--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                             </span>
                             <span class="classel">
                                 “VisualStudioCode” , “Figma” , “Photoshop” , “Illustrator” , “XD” , “InDesign ,
-                                “AfterEffects” ,“PremierePro””
+                                “AfterEffects” ,“PremierePro”
                             </span>
                             <span class="classbrckt">
                                 ]
