--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                                 [
                             </span>
                             <span class="classel">
-                                “VisualStudioCode” , “Figma” , “Photoshop” , “Illustrator” , “XD” , “InDesign ,
+                                “VisualStudioCode” , “Figma” , “Photoshop” , “Illustrator” , “XD” , “InDesign” ,
                                 “AfterEffects” ,“PremierePro”
                             </span>
                             <span class="classbrckt">
