--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                     </div>
                     <div class="btnWrap">
                         <div class="btn">
-                            <a href="">SEND</a>
+                            <a href="#top">SEND</a>
                         </div>
                     </div>
                     <div class="icons">
