discovering nbsp and emsp

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     <p class="classwrap" data-value="8">
                         <span class="classcode">
                             <span class="classbrckt">
-                                }
+                                &emsp;&emsp;&nbsp;}
                             </span>
                         </span>
                     </p>
@@ -238,7 +238,7 @@
                     <p class="classwrap" data-value="11">
                         <span class="classcode">
                             <span class="classbrckt">
-                                }
+                                &emsp;&emsp;&nbsp;}
                             </span>
                         </span>
                     </p>
@@ -272,7 +272,7 @@
                     <p class="classwrap" data-value="14">
                         <span class="classcode">
                             <span class="classbrckt">
-                                }
+                                &emsp;&emsp;&nbsp;}
                             </span>
                         </span>
                     </p>
@@ -306,7 +306,7 @@
                     <p class="classwrap" data-value="17">
                         <span class="classcode">
                             <span class="classbrckt">
-                                }
+                                &emsp;&emsp;&nbsp;}
                             </span>
                         </span>
                     </p>
@@ -341,7 +341,7 @@
                     <p class="classwrap" data-value="20">
                         <span class="classcode">
                             <span class="classbrckt">
-                                }
+                                &emsp;&emsp;&nbsp;}
                             </span>
                         </span>
                     </p>
