--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
     </main>
     <script src="js/index.js"></script>
     <script src="js/reveal.js"></script>
-    <script src="js/testing.js"></script>
+    <script src="js/slider.js"></script>
 
 </body>
 
