--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
             </div>
         </section>
     </main>
-    <script src="js/index.js"></script>
+    <script src="js/stars.js"></script>
     <script src="js/reveal.js"></script>
     <script src="js/slider.js"></script>
 
