--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/ress.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reveal.css">
-    <link rel="stylesheet" href="css/test.css">
+    <link rel="stylesheet" href="css/slider.css">
 </head>
 
 <body>
@@ -227,7 +227,7 @@
                                 [
                             </span>
                             <span class="classel">
-                                “English” , “BahasaIndonesia” , “Japanese” , “Hokkien”
+                                “English” , “BahasaIndonesia” , “Japanese”
                             </span>
                             <span class="classbrckt">
                                 ]
@@ -329,8 +329,9 @@
                                 [
                             </span>
                             <span class="classel">
-                                “VisualStudioCode” , “Figma” , “Photoshop” , “Illustrator” , &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; “XD” , “InDesign” ,
-                                “AfterEffects” ,“PremierePro”
+                                “VisualStudioCode” , “Figma” , “Photoshop” , “Illustrator” , 
+                                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+                                “XD” , “InDesign” , “AfterEffects” ,“PremierePro”
                             </span>
                             <span class="classbrckt">
                                 ]
@@ -379,7 +380,7 @@
                             <img class="slider-single-image" src="img/website/xco.png" alt="3" />
                             <div class="slider-single-title">
                                 <p>
-                                    XCOはいらない服を持ってる人同士が服を交換をするアプリです。
+                                    <span>XCO</span>はいらない服を持ってる人同士が服を交換をするアプリです。
                                 </p>
                                 <a target="_blank" href="https://click.ecc.ac.jp/ecc/json/XCO-LP/">
                                     サイトへ
@@ -415,7 +416,7 @@
                             <img class="slider-single-image" src="img/website/tdl.png" alt="5" />
                             <div class="slider-single-title">
                                 <p>
-                                    JavaScript を練習して使用し、簡単な To Do List サイト/アプリを作成する。
+                                    <span>JavaScript</span>を練習して使用し、簡単な<span>To Do List</span>サイト/アプリを作成する。
                                 </p>
                                 <a target="_blank" href="https://click.ecc.ac.jp/ecc/json/to-do-list/">
                                     サイトへ
