--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
     <div id="background">
         <canvas id="stars"></canvas>
     </div>
-    <div id="arrow">
-        <img src="img/top-arrow.png" alt="top-arrow" class="topArw">
-        <img src="img/bottom-arrow.png" alt="bottom-arrow" class="btmArw">
-    </div>
+
     <div class="border">
     </div>
     <div class="inner-cursor"></div>
@@ -87,6 +84,10 @@
                         <br>
                         And I'd like you to know more about myself.
                     </p>
+                </div>
+                <div id="arrow">
+                    <img src="img/top-arrow.png" alt="top-arrow" class="topArw">
+                    <img src="img/bottom-arrow.png" alt="bottom-arrow" class="btmArw">
                 </div>
             </div>
         </section>
@@ -506,6 +507,9 @@
                 </div>
             </div>
         </section>
+        <footer>
+            <p>Jason Ng's Portfolio &trade;</p>
+        </footer>
     </main>
     <script src="js/stars.js"></script>
     <script src="js/reveal.js"></script>
