re editing and adding footer

--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
             </div>
         </section>
         <footer>
-            <p>Jason Ng's Portfolio &trade;</p>
+            <p>2023 &copy; Jason Ng's Portfolio</p>
         </footer>
     </main>
     <script src="js/stars.js"></script>
