edit profile section

--- a/index.html
+++ b/index.html
@@ -330,9 +330,7 @@
                                 [
                             </span>
                             <span class="classel">
-                                “VisualStudioCode” , “Figma” , “Photoshop” , “Illustrator” , 
-                                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-                                “XD” , “InDesign” , “AfterEffects” ,“PremierePro”
+                                “VisualStudioCode” , “Figma” , “Photoshop” , “Illustrator” , “XD” , “InDesign” , “AfterEffects” ,“PremierePro”
                             </span>
                             <span class="classbrckt">
                                 ]
