--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
                     <div class="aboutMe">
                         <p>
                             新しいことを探求するのが好きで、好奇心が強く、満足するまで諦めません！
-                            <br>
+                            <span class="br"></span>
                             何かに興味を持ったら、それが理解できるまで調べないと、じっとしていられなくなります。
-                            <br>
+                            <span class="br"></span>
                             私はプログラミングの経験がなく、最初は苦労しましたが、コンピューター言語はほとんど英語を使用しているため、すぐに理解できました。
-                            <br>
+                            <span class="br"></span>
                             現在、私は主にフロントエンド
                             エンジニアリングの分野を勉強しています。JavaScriptの使い方を学ぶことに多くの時間を費やしているので、いつかこの知識を使ってより多くのコンピューター言語を学べるようになりたいです。
                         </p>
