--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <h1>ABOUT</h1>
                 </div>
                 <div class="aboutMain">
-                    <div class="aboutPic reveal">
+                    <div class="aboutPic reveal tilt">
                     </div>
                     <div class="aboutMe">
                         <p>
@@ -435,79 +435,78 @@
                     <h1>CONTACT</h1>
                 </div>
                 <!-- <form action="https://formsubmit.co/jasmix555@email.com" method="POST"> -->
-                    <div class="inputWrap">
-                        <div class="inputBox">
-                            <input type="text" name="Name" required="required">
-                            <span>名前:</span>
-                            <div class="line"></div>
-                        </div>
-                        <div class="inputBox">
-                            <input type="email" name="Email" required="required">
-                            <span>メール:</span>
-                            <div class="line"></div>
-                        </div>
-                        <div class="txtarea">
-                            <textarea id="text" name="Message" cols="30" rows="1" required="required"></textarea>
-                            <span>メッセージ：</span>
-                            <div class="line"></div>
-                        </div>
-                        <div class="btnWrap">
-                            <div class="btn">
-                                <!-- <button type="submit">
+                <div class="inputWrap">
+                    <div class="inputBox">
+                        <input type="text" name="Name" required="required">
+                        <span>名前:</span>
+                        <div class="line"></div>
+                    </div>
+                    <div class="inputBox">
+                        <input type="email" name="Email" required="required">
+                        <span>メール:</span>
+                        <div class="line"></div>
+                    </div>
+                    <div class="txtarea">
+                        <textarea id="text" name="Message" cols="30" rows="1" required="required"></textarea>
+                        <span>メッセージ：</span>
+                        <div class="line"></div>
+                    </div>
+                    <div class="btnWrap">
+                        <div class="btn">
+                            <!-- <button type="submit">
                                 </button> -->
-                                <a href="#top">SEND</a>
-                            </div>
+                            <a href="#top">SEND</a>
                         </div>
-                        <div class="icons">
-                            <a href="https://github.com/jasmix555" target="_blank">
-                                <svg version="1.1" id="git" xmlns="http://www.w3.org/2000/svg"
-                                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 141.7 141.7"
-                                    style="enable-background:new 0 0 141.7 141.7;" xml:space="preserve">
-                                    <style type="text/css">
-                                        .st0 {
-                                            fill: none;
-                                        }
-                                    </style>
-                                    <rect x="-329.1" y="-329.1" class="st0" width="800" height="800" />
-                                    <path d="M71,1.8C32,1.7,0.1,33.2,0,72.3c-0.1,30.7,19.5,57.9,48.7,67.5c3.5,0.6,4.7-1.6,4.7-3.5v-12c-19.6,4.2-23.8-9.3-23.8-9.3
+                    </div>
+                    <div class="icons">
+                        <a href="https://github.com/jasmix555" target="_blank">
+                            <svg version="1.1" id="git" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 141.7 141.7"
+                                style="enable-background:new 0 0 141.7 141.7;" xml:space="preserve">
+                                <style type="text/css">
+                                    .st0 {
+                                        fill: none;
+                                    }
+                                </style>
+                                <rect x="-329.1" y="-329.1" class="st0" width="800" height="800" />
+                                <path d="M71,1.8C32,1.7,0.1,33.2,0,72.3c-0.1,30.7,19.5,57.9,48.7,67.5c3.5,0.6,4.7-1.6,4.7-3.5v-12c-19.6,4.2-23.8-9.3-23.8-9.3
 	c-1.3-4.4-4.2-8.2-8.1-10.6c-6.4-4.4,0.5-4.2,0.5-4.2c4.5,0.6,8.5,3.2,10.8,7.1c4.1,7.3,13.3,9.9,20.6,5.9c0.3-3.6,1.9-6.9,4.5-9.5
 	c-15.1-1.6-32-7.6-32-34.6c-0.2-7.1,2.3-14,7.1-19.2c-2.2-6.1-1.9-12.8,0.7-18.7c0,0,5.9-1.9,19.5,7.1c11.6-3.1,23.8-3.1,35.4,0
 	c13.5-9.1,19.5-7.1,19.5-7.1c2.6,5.9,2.9,12.6,0.7,18.7c4.7,5.2,7.3,12.1,7.1,19.2c0,27-16.6,33-32.3,34.7c3.4,3.5,5.2,8.2,4.9,13.1
 	v19.4c0,1.9,1.1,4.2,4.7,3.5c37.1-12.2,57.3-52.2,45.1-89.3C128.6,21.5,101.6,1.9,71,1.8z" />
-                                </svg>
+                            </svg>
 
-                            </a>
-                            <a href="https://www.instagram.com/jason_ng555/" target="_blank">
-                                <svg version="1.1" id="insta" xmlns="http://www.w3.org/2000/svg"
-                                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 141.7 141.7"
-                                    style="enable-background:new 0 0 141.7 141.7;" xml:space="preserve">
-                                    <g>
-                                        <path d="M70.9,83.3c6.9,0,12.5-5.6,12.5-12.5c0-2.7-0.9-5.2-2.4-7.3c-2.3-3.1-6-5.2-10.1-5.2c-4.2,0-7.8,2-10.1,5.2
+                        </a>
+                        <a href="https://www.instagram.com/jason_ng555/" target="_blank">
+                            <svg version="1.1" id="insta" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 141.7 141.7"
+                                style="enable-background:new 0 0 141.7 141.7;" xml:space="preserve">
+                                <g>
+                                    <path d="M70.9,83.3c6.9,0,12.5-5.6,12.5-12.5c0-2.7-0.9-5.2-2.4-7.3c-2.3-3.1-6-5.2-10.1-5.2c-4.2,0-7.8,2-10.1,5.2
 		c-1.5,2-2.4,4.6-2.4,7.3C58.4,77.7,64,83.3,70.9,83.3z" />
-                                        <polygon
-                                            points="98.1,55.6 98.1,45.1 98.1,43.6 96.6,43.6 86.1,43.6 86.1,55.6 	" />
-                                        <path d="M90.2,70.9c0,10.7-8.7,19.4-19.4,19.4s-19.4-8.7-19.4-19.4c0-2.6,0.5-5,1.4-7.3H42.4v29c0,3.7,3,6.8,6.8,6.8h43.5
+                                    <polygon points="98.1,55.6 98.1,45.1 98.1,43.6 96.6,43.6 86.1,43.6 86.1,55.6 	" />
+                                    <path d="M90.2,70.9c0,10.7-8.7,19.4-19.4,19.4s-19.4-8.7-19.4-19.4c0-2.6,0.5-5,1.4-7.3H42.4v29c0,3.7,3,6.8,6.8,6.8h43.5
 		c3.7,0,6.8-3,6.8-6.8v-29H88.8C89.7,65.8,90.2,68.3,90.2,70.9z" />
-                                        <path d="M70.9,0C31.7,0,0,31.7,0,70.9s31.7,70.9,70.9,70.9s70.9-31.7,70.9-70.9S110,0,70.9,0z M106.3,63.6v29
+                                    <path d="M70.9,0C31.7,0,0,31.7,0,70.9s31.7,70.9,70.9,70.9s70.9-31.7,70.9-70.9S110,0,70.9,0z M106.3,63.6v29
 		c0,7.6-6.1,13.7-13.7,13.7H49.1c-7.6,0-13.7-6.1-13.7-13.7v-29V49.1c0-7.6,6.1-13.7,13.7-13.7h43.5c7.6,0,13.7,6.1,13.7,13.7V63.6z
 		" />
-                                    </g>
-                                </svg>
-                            </a>
-                            <a href="https://twitter.com/Jasmix_555" target="_blank">
-                                <svg version="1.1" id="twit" xmlns="http://www.w3.org/2000/svg"
-                                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 141.7 141.7"
-                                    style="enable-background:new 0 0 141.7 141.7;" xml:space="preserve">
-                                    <path d="M70.9,0C31.7,0,0,31.7,0,70.9s31.7,70.9,70.9,70.9s70.9-31.7,70.9-70.9S110,0,70.9,0z M99.2,59.8c0,0.6,0,1.2,0,1.9
+                                </g>
+                            </svg>
+                        </a>
+                        <a href="https://twitter.com/Jasmix_555" target="_blank">
+                            <svg version="1.1" id="twit" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 141.7 141.7"
+                                style="enable-background:new 0 0 141.7 141.7;" xml:space="preserve">
+                                <path d="M70.9,0C31.7,0,0,31.7,0,70.9s31.7,70.9,70.9,70.9s70.9-31.7,70.9-70.9S110,0,70.9,0z M99.2,59.8c0,0.6,0,1.2,0,1.9
 	c0,19.2-14.6,41.4-41.4,41.4c-8.2,0-15.9-2.4-22.3-6.5c1.1,0.1,2.3,0.2,3.5,0.2c6.8,0,13.1-2.3,18.1-6.2
 	c-6.4-0.1-11.8-4.3-13.6-10.1c0.9,0.2,1.8,0.2,2.7,0.2c1.3,0,2.6-0.2,3.8-0.5c-6.7-1.3-11.7-7.2-11.7-14.3v-0.2
 	c2,1.1,4.2,1.7,6.6,1.8c-3.9-2.6-6.5-7.1-6.5-12.1c0-2.7,0.7-5.2,2-7.3c7.2,8.8,17.9,14.6,30,15.2C70.1,62.3,70,61.2,70,60
 	c0-8,6.5-14.6,14.6-14.6c4.2,0,8,1.8,10.6,4.6c3.3-0.7,6.4-1.9,9.2-3.5c-1.1,3.4-3.4,6.3-6.4,8.1c2.9-0.4,5.8-1.1,8.4-2.3
 	C104.5,55.2,102,57.8,99.2,59.8z" />
-                                </svg>
-                            </a>
-                        </div>
+                            </svg>
+                        </a>
                     </div>
+                </div>
                 <!-- </form> -->
             </div>
         </section>
@@ -518,6 +517,13 @@
     <script src="js/stars.js"></script>
     <script src="js/reveal.js"></script>
     <script src="js/slider.js"></script>
+    <script src="js/tilt.js"></script>
+    <script type="text/javascript">
+        VanillaTilt.init(document.querySelectorAll(".tilt"), {
+            max: 25,
+            speed: 400
+        });
+    </script>
 
 </body>
 
