--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                             <span class="br"></span>
                             私はプログラミングの経験がなく、最初は苦労しましたが、コンピューター言語はほとんど英語を使用しているため、すぐに理解できました。
                             <span class="br"></span>
-                            現在、私は主にフロントエンド
-                            エンジニアリングの分野を勉強しています。JavaScriptの使い方を学ぶことに多くの時間を費やしているので、いつかこの知識を使ってより多くのコンピューター言語を学べるようになりたいです。
+                            現在、主にフロントエンド分野を勉強しています。 それと同時に、UI/UX 設計のスキル向上もしていて以前の作品を使いやすくしたり、さらに魅力的にしたりして改善しようとしています。
+                            
                         </p>
                     </div>
                 </div>
