--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                   <p>睡眠時間が確保しやすくなる睡眠サポートアプリ。</p>
                   <a
                     target="_blank"
-                    href="https://click.ecc.ac.jp/ecc/json/Nemu-Nemu%20Kun/"
+                    href="https://click.ecc.ac.jp/ecc/json/Nemu-Nemu-Kun/"
                   >
                     サイトへ
                   </a>
