Update: Improved skills and learning Next.js

--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
                 <span class="br"></span>
                 私はプログラミングの経験がなく、最初は苦労しましたが、コンピューター言語はほとんど英語を使用しているため、すぐに理解できました。
                 <span class="br"></span>
-                現在、主にフロントエンド分野を勉強しています。
-                それと同時に、UI/UX
-                設計のスキル向上もしていて以前の作品を使いやすくしたり、さらに魅力的にしたりして改善しようとしています。
+                現在は、フルスタックエンジニアになることを目指して、Next.jsの学習に取り組んでいます。
+                <span class="br"></span>
+                HTML、CSS、JavaScriptの基本を熟知しており、視覚的に魅力的なWebインターフェースを実現することが得意です。
               </p>
             </div>
           </div>
