Update index.html with new technologies

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
               <span class="classcode">
                 <span class="classrtrn"> return </span>
                 <span class="classbrckt"> [ </span>
-                <span class="classel"> “HTML5” , “CSS” </span>
+                <span class="classel"> “HTML5” , “SCSS” , “Next.Js”</span>
                 <span class="classbrckt"> ] </span>
                 ;
               </span>
@@ -256,7 +256,7 @@
               <span class="classcode">
                 <span class="classrtrn"> return </span>
                 <span class="classbrckt"> [ </span>
-                <span class="classel"> “Javascript” , “SASS” , “PHP” </span>
+                <span class="classel"> “Javascript” , “PHP” </span>
                 <span class="classbrckt"> ] </span>
                 ;
               </span>
@@ -305,6 +305,25 @@
           </div>
           <div class="slider-container">
             <div class="slider-content">
+              <div class="slider-single">
+                <img
+                  class="slider-single-image"
+                  src="img/website/chittle.png"
+                  alt="2"
+                />
+                <div class="slider-single-title">
+                  <p>
+                    新しい料理を試すのにちょうどいい量の調味料を販売するサイト。
+                  </p>
+                  <a
+                    target="_blank"
+                    href="https://click.ecc.ac.jp/ecc/json/Chittle/"
+                  >
+                    サイトへ
+                  </a>
+                </div>
+              </div>
+
               <div class="slider-single">
                 <img
                   class="slider-single-image"
