Update language options and remove unused code

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 <span class="classrtrn"> return </span>
                 <span class="classbrckt"> [ </span>
                 <span class="classel">
-                  “English” , “BahasaIndonesia” , “Japanese” , “Chinese”
+                  “English” , “Bahasa Indonesia” , “Japanese”
                 </span>
                 <span class="classbrckt"> ] </span>
                 ;
@@ -305,25 +305,6 @@
           </div>
           <div class="slider-container">
             <div class="slider-content">
-              <div class="slider-single">
-                <img
-                  class="slider-single-image"
-                  src="img/website/chittle.png"
-                  alt="2"
-                />
-                <div class="slider-single-title">
-                  <p>
-                    新しい料理を試すのにちょうどいい量の調味料を販売するサイト。
-                  </p>
-                  <a
-                    target="_blank"
-                    href="https://click.ecc.ac.jp/ecc/json/Chittle/"
-                  >
-                    サイトへ
-                  </a>
-                </div>
-              </div>
-
               <div class="slider-single">
                 <img
                   class="slider-single-image"
